--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
      <body style="width: 100%;">
          <h1>Pepole Entered</h1>
          <h2 id="count-el">0</h2>
-         <button id ="incrementbtn" onclick="increment()">Increment</button>
-         <button id ="savebtn" onclick="save()">Save</button>
+         <button id ="incrementbtn" onclick="increment()">Increment</button><br>
+         <button id ="savebtn" onclick="save()">Save</button><br>
+         <button id ="decrementbtn" onclick="decrement()">Decrement</button><br>
         <p id="save-el">Previous Entry:</p>
 
 
